logs/topp.utils.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/topp'...
Listing './lib/python3.5/site-packages/topp/utils'...
Compiling './lib/python3.5/site-packages/topp/utils/detag.py'...
***   File "./lib/python3.5/site-packages/topp/utils/detag.py", line 33
    print string
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/topp/utils/error.py'...
***   File "./lib/python3.5/site-packages/topp/utils/error.py", line 13
    print err_string + ":", msg
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/topp/utils/modules.py'...
***   File "./lib/python3.5/site-packages/topp/utils/modules.py", line 48
    print "Usage: pytroff [PACKAGE]"
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/topp/utils/orderedpersistentmapping.py'...
***   File "./lib/python3.5/site-packages/topp/utils/orderedpersistentmapping.py", line 66
    raise KeyError, 'dictionary is empty'
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/topp/utils/pretty_date.py'...
***   File "./lib/python3.5/site-packages/topp/utils/pretty_date.py", line 124
    print "** Test failed: expected %s, got %s" % (expected, got)
                                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/topp/utils/setup_command.py'...
***   File "./lib/python3.5/site-packages/topp/utils/setup_command.py", line 47
    print "Path %s not found" %path
                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/topp/utils/wenvutils.py'...
***   File "./lib/python3.5/site-packages/topp/utils/wenvutils.py", line 42
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/topp.utils-0.5.1.egg-info'...
Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/dottedname'...
Listing './lib/python3.5/site-packages/zope.dottedname-4.2.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
